@@ -20,6 +20,10 @@ Python</a>: an interpreted, interactive, object-oriented programming language.
 <li>Optional automatic whitelisting of confirmed senders.
 <br><br>
 
+<li>Smart auto-responding -- won't reply to a mailing list or bounce
+message.  Includes auto-response rate limiting to prevent mail loops.
+<br><br>
+
 <li>Client-side support for both Unix and non-Unix (e.g, Outlook, Eudora, Mozilla)
 mail clients.<br><br>
 
@@ -37,7 +41,7 @@ mboxes, program (pipe) delivery, and forward to an e-mail address.<br><br>
 <li>Supports DBM and <a href="http://cr.yp.to/cdb.html" TARGET="Resource Window">
 CDB</a> databases, including on-demand auto-regeneration of DB files.<br><br>
 
-<li>Optional delivery logging.<br><br>
+<li>Optional logging of incoming and outgoing messages.<br><br>
 
 <li>Easy customization of confirmation messages through templates.<br><br>
 
