@@ -1,3 +1,9 @@
+2002-08-21  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
+
+	* tmda-rfilter (autorespond_to_sender): New function.  Determine
+	whether to auto-respond based on detection of mailing list/bounce
+	messages as well if the auto-response rate limit has been reached.
+	
 2002-08-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-rfilter (logit): Move guts into TMDA/MessageLogger.
