@@ -1,3 +1,8 @@
+2002-08-21  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
+
+	* Defaults.py (MAX_AUTORESPONSES_PER_DAY, RESPONSE_DIR): New
+	variables.
+
 2002-08-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* MessageLogger.py: New module.
